--- a/style.css
+++ b/style.css
@@ -5,12 +5,6 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-
-.bg-lapizza {
-    width: 100%;
-    height: 197px;
-    margin-bottom: 80px;
-}
 .bg-pizza {
     width: 100%;  
 }
@@ -21,6 +15,9 @@
 .bg-lapizza {
     display: flex;
     justify-content: center;
+    width: 100%;
+    height: 197px;
+    margin-bottom: 80px;
 }
 
 .bg-logo {
@@ -129,12 +126,18 @@ input {
     height: 35px;
     border: 2px solid #CF3031;
     border-radius: 14px;
-    background: #ffffff;
+    background: #fef6f4;
+    background-image: url("img/img-heart.png");
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 input:checked {
     background: #FFD4C9;
     border: 2px solid #CF3031;
+    background-image: url("img/img-heart.png");
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .img-like {
@@ -142,7 +145,8 @@ input:checked {
     height: 15px;
     margin-top: 40px;
     left: 20px;
-      position: relative;
+    position: relative;
+    z-index: 999px;
 }
 
 /* Sobre o la Pizza */
@@ -182,4 +186,25 @@ footer {
     text-align: center;
     margin-bottom: 10px;
     color: #2e2e2e;
+}
+
+@media screen and (min-width:500px){
+    .bg-lapizza {
+        height: 370px;
+
+    }
+}
+
+@media screen and (min-width:850px){
+    .bg-lapizza {
+        height: 500px;
+
+    }
+
+    .bg-logo {
+        width: 400px;
+        height: 560px;
+        display: flex;
+        align-items: center;
+    }
 }
